--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "bluebird": "^2.3.2",
     "cheerio": "^0.17.0",
+    "lodash": "^2.4.1",
     "request": "^2.41.0",
     "tough-cookie": "^0.12.1"
   }
