--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "bluebird": "^2.3.2",
     "cheerio": "^0.17.0",
     "lodash": "^2.4.1",
-    "request": "^2.41.0",
-    "tough-cookie": "^0.12.1"
+    "request": "^2.41.0"
   }
 }
