--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "bluebird": "^2.3.2",
     "cheerio": "^0.17.0",
     "lodash": "^2.4.1",
-    "request": "^2.41.0"
+    "request": "^2.41.0",
+    "sleep": "^1.1.8",
+    "sleeprest": "^0.1.8"
   }
 }
